# AegisProgrammingLanguage

./: 404.html  Cargo.toml  README.md  index.html  print.html  searcher-c2a407aa.js  searchindex-3e71406e.js  searchindex-9e7bdb3a.js  searchindex-a6895381.js  searchindex-b68f18df.js  searchindex-daaade7a.js  test_data.txt  toc-5dffcd49.js  toc-621ee4a4.js  toc-ce36d0ad.js  toc.html
advanced/: architecture.html  index.html  native_extensions.html
basics/: comments.html  control_flow.html  index.html  style_guide.html  typing.html  variables.html
benchmark/: result.txt
cookbook/: files.html  index.html  network.html  system.html
functions/: declaration.html  decorators.html  functional.html  index.html  lambdas.html
getting_started/: apm.html  cheatsheet.html  hello_world.html  index.html  installation.html  repl.html
modularity/: errors.html  imports.html  index.html  namespaces.html
oop/: classes.html  composition.html  index.html  inheritance.html  methods.html
src/: ast.rs  compiler.rs  environment.rs  interpreter.rs  lib.rs  loader.rs  main.rs  opcode.rs  package_manager.rs  parser.rs  plugins.rs  stdlib.rs
stdlib/: crypto.aeg  data.html  date.aeg  file.aeg  fs.html  http.aeg  http.html  index.html  math.aeg  math.html  path.aeg  process.aeg  random.aeg  regex.aeg  socket.aeg  socket.html  system.aeg  system.html  test.aeg  test.html  time.aeg
structures/: dictionaries.html  index.html  lists.html  strings.html
tests/: crash_test.aeg  demo_life.aeg  dict_list_test.aeg  fibo.aeg  more_or_less_game.aeg  pokeapi_tracker.aeg  test.aeg  test.json  (+34 more)
(+36 files in other folders)
