[package]
name = "aegis"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json", "default-tls"] }
libloading = "0.8"
toml = "0.8"

[lib]
name = "aegis_core"
path = "src/lib.rs"
crate-type = ["rlib"]

[[bin]]
name = "aegis"
path = "src/main.rs"
